# model-harmonics

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.binder/: environment.yml
.github/workflows/: python-request.yml  sphinx-build.yml
ECCO/: ecco_cube92_ocean_depth.py  ecco_depth_version4.py  ecco_geoid_llc_tiles.py  ecco_llc_tile_harmonics.py  ecco_mean_cube92.py  ecco_mean_llc_tiles.py  ecco_mean_realtime.py  ecco_mean_version4.py  ecco_monthly_harmonics.py  ecco_read_cube92.py  ecco_read_llc_tiles.py  ecco_read_realtime.py  ecco_read_version4.py  ecco_v4_ocean_depth.py  jpl_ecco_cube92_sync.py  jpl_ecco_llc_sync.py  jpl_ecco_sync.py  jpl_ecco_v4_sync.py  jpl_ecco_webdav.py
GIA/: GIA_GSFC_mascons.py  GIA_spatial_maps.py  GIA_uplift_ICESat2_ATL15.py
GLDAS/: gesdisc_gldas_sync.py  gldas_mask_arctic.py  gldas_mask_permafrost.py  gldas_mask_vegetation.py  gldas_mean_monthly.py  gldas_monthly_harmonics.py  gldas_read_monthly.py  gldas_scaling_factors.py
OBP/: ecco_depth_version4.py  ecco_geoid_llc_tiles.py  ecco_llc_tile_harmonics.py  ecco_mean_llc_tiles.py  ecco_mean_realtime.py  ecco_mean_version4.py  ecco_monthly_harmonics.py  ecco_read_llc_tiles.py  ecco_read_realtime.py  ecco_read_version4.py  jpl_ecco_cube92_sync.py  jpl_ecco_llc_sync.py  jpl_ecco_sync.py  jpl_ecco_v4_sync.py  jpl_ecco_webdav.py
SMB/: era5_smb_cumulative.py  era5_smb_harmonics.py  era5_smb_mean.py  gemb_smb_cumulative.py  gemb_smb_harmonics.py  gesdisc_merra_sync.py  merra_hybrid_cumulative.py  merra_hybrid_harmonics.py  merra_hybrid_regrid.py  merra_smb_cumulative.py  merra_smb_harmonics.py  merra_smb_mask.py  merra_smb_mean.py  racmo_downscaled_cumulative.py  racmo_downscaled_harmonics.py  racmo_downscaled_mean.py  racmo_smb_cumulative.py  racmo_smb_harmonics.py
TWS/: cds_land_retrieve.py  era5_land_mask_arctic.py  era5_land_mask_permafrost.py  era5_land_mean_monthly.py  era5_land_monthly_harmonics.py  era5_land_read_monthly.py  gesdisc_gldas_sync.py  gldas_mask_arctic.py  gldas_mask_permafrost.py  gldas_mask_vegetation.py  gldas_mean_monthly.py  gldas_monthly_harmonics.py  gldas_read_3hourly.py  gldas_read_monthly.py  gldas_scaling_factors.py
doc/: environment.yml
doc/source/: conf.py  index.rst
doc/source/_assets/: model-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: API-Reference.rst  GIA_GSFC_mascons.rst  GIA_uplift_ICESat2_ATL15.rst  aod1b_global_uplift.rst  cds_reanalysis_retrieve.rst  constants.rst  datum.rst  ecco_depth_version4.rst  ecco_geoid_llc_tiles.rst  ecco_llc_tile_harmonics.rst  ecco_mean_llc_tiles.rst  ecco_mean_realtime.rst  ecco_monthly_harmonics.rst  ecco_read_realtime.rst  era5_smb_cumulative.rst  era5_smb_harmonics.rst  era5_smb_mean.rst  gemb_smb_cumulative.rst  gemb_smb_harmonics.rst  gen_atmosphere_stokes.rst  gen_point_pressure.rst  gen_pressure_stokes.rst  gesdisc_gldas_sync.rst  gesdisc_merra_download.rst  gesdisc_merra_monthly.rst  gesdisc_merra_subset.rst  gldas_mask_arctic.rst  gldas_mask_permafrost.rst  gldas_monthly_harmonics.rst  gldas_read_monthly.rst  gldas_scaling_factors.rst  greens_kernel.rst  harmonic_operators.rst  jpl_ecco_sync.rst  jpl_ecco_webdav.rst  least_squares_mascon_timeseries.rst  least_squares_mascons.rst  merra_hybrid_harmonics.rst  merra_hybrid_regrid.rst  merra_smb_cumulative.rst  (+19 more)
doc/source/getting_started/: Citations.md  Citations.rst  Contributing.rst  Install.ipynb  Install.md  Install.rst  NASA-Earthdata.md  (+2 more)
model_harmonics/: __init__.py  constants.py  datum.py  gen_atmosphere_stokes.py  gen_point_pressure.py  gen_pressure_stokes.py  greens_kernel.py  spatial.py  utilities.py  version.py
reanalysis/: aod1b_global_uplift.py  cds_reanalysis_retrieve.py  ecmwf_reanalysis_retrieve.py  gesdisc_merra_download.py  gesdisc_merra_monthly.py  gesdisc_merra_subset.py  model_level_coefficients.py  noaa_cdc_ncep_ftp.py  reanalysis_atmospheric_harmonics.py  reanalysis_geopotential_heights.py  reanalysis_inverse_barometer.py  reanalysis_mean_harmonics.py  reanalysis_mean_pressure.py  reanalysis_monthly_harmonics.py  reanalysis_monthly_pressure.py  reanalysis_pressure_harmonics.py  ucar_gdex_jra3q_surface.py  ucar_rda_cfsr_surface.py  ucar_rda_jra55_surface.py
scripts/: harmonic_operators.py  least_squares_mascon_timeseries.py  least_squares_mascons.py  regress_maps.py  spatial_operators.py
seismic/: seismic_monthly_harmonics.py
test/: conftest.py  test_download_files.py  test_ellipsoid.py  test_point_pressures.py
(+222 files in other folders)
